tests/Rules/Structure/Fixtures/invalid/area_no_alt.html.twig
{# 1 error #}
<area href="#">
